# earshot

./: .gitignore  CONTRIBUTING.md  README.md  build_app.sh  earshot_run  pyproject.toml  run_app.sh  run_earshot  run_window.sh  setup.py  setup.sh  whisperx_run
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  stale.yml
Earshot-Swift/: project.yml  run.sh
Earshot-Swift/Earshot-iOS/: Info.plist
Earshot-Swift/Earshot-iOS/App/: EarshotApp.swift
Earshot-Swift/Earshot-iOS/BroadcastExt/: SampleHandler.swift
Earshot-Swift/Earshot-macOS/: Info.plist
Earshot-Swift/Earshot-macOS/App/: EarshotApp.swift  FloatingPanel.swift
Earshot-Swift/Earshot-macOS/Audio/: AppAudioPicker.swift  ScreenCaptureManager.swift
Earshot-Swift/Earshot-macOS/ViewModels/: RecordingViewModel.swift
Earshot-Swift/Earshot-macOS/Views/: MainView.swift  SettingsView.swift
Earshot-Swift/Earshot.xcodeproj/: project.pbxproj
Earshot-Swift/EarshotKit/: Package.resolved  Package.swift
docs/plans/: 2026-03-13-swift-rewrite-design.md  2026-03-13-swift-rewrite-plan.md
earshot/: __init__.py  app.py  audio_capture.py  config.py  diarization.py  file_processor.py  history.py  output_writer.py  themes.py  transcriber.py  window.py
earshot/widgets/: __init__.py  settings.py  transcript.py  waveform.py
resources/: README.md
whisperx_app/: __init__.py  app.py  audio_capture.py  config.py  transcriber.py
(+30 files in other folders)
