[project]
name = "earshot"
version = "2.0.0"
description = "Local audio transcription with floating window UI"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.11.0",
    "pyaudio>=0.2.13",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "mlx-whisper>=0.1.0",
    "openai>=1.0.0",
    "watchdog>=3.0.0",
]

[project.scripts]
earshot = "earshot.window:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["earshot"]
